# dvgrabgui-remastered

./: CMakeLists.txt  Doxyfile  README.md  README_en_GB.txt  README_es_ES.txt  README_fr_FR.txt  SConstruct  dvgrabgui-dbg-wx-2.6.desktop  dvgrabgui-dbg.desktop.in  dvgrabgui-wx-2.6.desktop  dvgrabgui-wx-2.8.desktop  dvgrabgui.desktop.in  dvgrabgui16x16.xpm  dvgrabgui32x32.xpm
DEB_wx-2.6/: changelog  control  copyright  dvgrabgui-wx26.links  dvgrabgui-wx26.manpages  dvgrabgui.1  dvgrabgui.doc-base.es  dvgrabgui.es.1  dvgrabgui.fr.1  menu  rules
RPM/: dvgrabgui.spec
debian/: control  dvgrabgui-wx28.links  dvgrabgui.1  dvgrabgui.doc-base.en  dvgrabgui.doc-base.fr  dvgrabgui.es.1  dvgrabgui.fr.1  menu  rules
help/en_GB/: contents_dvgrabgui.hhc  help_dvgrabgui_en_GB.hhp  index_dvgrabgui.hhk  main.html  ref_index.html  ref_menus.html  ref_settings_capt.html  ref_settings_gui.html  ref_settings_hw.html  ref_video_norm.html  ref_video_small.html  usage.html
help/es_ES/: contents_dvgrabgui.hhc  help_dvgrabgui_es_ES.hhp  index_dvgrabgui.hhk  main.html  ref_index.html  ref_menus.html  ref_settings_capt.html  usage.html  (+4 more)
langs/: dvgrabgui.pot
src/: SConscript  affine.h  avi.cpp  avi.h  dvgrab.cpp  dvgrab.h  endian_types.h  filehandler.cpp  filehandler.h  frame.cpp  frame.h  ieee1394io.cpp  ieee1394io.h  includes.h  mainframe.cpp  mainframe.h  mainwindow.cpp  mainwindow.h  raw1394util.cpp  raw1394util.h  riff.cpp  riff.h  settingswindow.cpp  settingswindow.h  smiltime.cpp  smiltime.h  stringutils.cpp  stringutils.h  theapp.cpp  theapp.h  threadinout.h  vidwin.cpp  vidwin.h
(+36 files in other folders)
